--- a/head.html
+++ b/head.html
@@ -32,6 +32,7 @@
     var compare_url = '{$wa->getUrl('/frontend/compare/', ['id' => implode(',', $compare) ])}';
     var tagcanvas = '{$theme_settings.tagcanvas}';
     var filter_slider = {if !empty($filters) && !empty($theme_settings.filter_slider)}1{else}0{/if};
+    var ruble_symbol = {if !empty($theme_settings.ruble_symbol)}1{else}0{/if};
 </script>
 <script type="text/javascript" src="{$wa_active_theme_url}tools.shop.js?v{$wa_theme_version}"></script>
 <script type="text/javascript" src="{$wa_active_theme_url}jquery.total-storage.min.js"></script>
